# ugc-polls

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker_compose.sh  docker_compose_prod.sh  locustfile.py  pyproject.toml
config/: health.py  settings.py  test_settings.py  urls.py
k8s/: README.md
k8s/base/: configmap-nginx.yaml  configmap.yaml  deployment-web.yaml  hpa-web.yaml  ingress.yaml  job-migrate.yaml  kustomization.yaml  namespace.yaml  pdb-web.yaml  secret.example.yaml  service-web.yaml  serviceaccount.yaml
k8s/optional-stateful/: kustomization.yaml  postgres.yaml  redis.yaml
k8s/overlays/full-stack/: kustomization.yaml
ugc/: admin.py  apps.py  serializers.py  services.py  signals.py  urls.py  views.py
ugc/management/commands/: generate_test_data.py  generate_users.py
ugc/migrations/: 0001_initial.py  0002_questionstatistics_answeroptionstatistics_and_more.py
ugc/models/: __init__.py  answer_option.py  poll.py  poll_session.py  question.py  statistics.py  user.py  user_answer.py
ugc/tests/: test_models.py  test_serializers.py  test_services.py  test_signals.py  test_statistics.py  test_views.py
